--- a/madlibs-project/lilas-tugba/index.html
+++ b/madlibs-project/lilas-tugba/index.html
@@ -7,11 +7,19 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+      <div id="header">
+          <h1> MadLibs </h1>
+      </div>
+      <div id="instructions">
+        <div>
+          <b> Write your own story by filling in the blanks below: </b>
+        </div>
+      </div>
     <div class='madLibsEdit'>
     </div>
     <div class='madLibsPreview'>
     </div>
-    <script src="do-not-touch.js"></script>
-    <script src="madlibs.js"></script>
+    <script src="do-not-touch.js"> </script>
+    <script src="madlibs.js"> </script>
   </body>
 </html>
